--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -114,9 +114,7 @@ file that was distributed with this source code.
                         <nav class="navbar navbar-static-top" role="navigation">
                             <a href="#" class="navbar-btn sidebar-toggle" data-toggle="offcanvas" role="button">
                                 <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
+                                <i class="fa fa-bars" style="font-size:1.5em;"></i>
                             </a>
 
                             <div class="navbar-left">
