--- a/Resources/public/css/styles.css
+++ b/Resources/public/css/styles.css
@@ -146,7 +146,6 @@ body > .header .logo {
 
 .navbar-top-links li {
     display: inline-block;
-    background: white;
 }
 
 .navbar-top-links li a,
@@ -213,6 +212,10 @@ body > .header .logo {
 
 body.fixed .content-header .navbar {
     position: relative;
+    background: #8CC152;
+    border: 0;
+    border-radius: 0;
+    height:55px;
 }
 
 /* sidebar menu styles */
@@ -270,7 +273,7 @@ table.sonata-ba-list {
 td.sonata-ba-list-label {
     color: #565656;
     font-weight: bold;
-    text-align: right;
+    text-align: left;
     vertical-align: middle !important;
 }
 
