--- a/Resources/public/css/adminLTE.css
+++ b/Resources/public/css/adminLTE.css
@@ -2061,7 +2061,7 @@ Component: timeline
 ------------------------
 */
 .callout {
-    margin: 0 0 20px 0;
+    margin: 0;
     padding: 15px 30px 15px 15px;
     border-left: 5px solid #eee;
 }
