--- a/Resources/public/css/adminLTE.css
+++ b/Resources/public/css/adminLTE.css
@@ -1957,8 +1957,8 @@ Component: timeline
     border-bottom-color: #d9dadc;
 }
 .btn.btn-primary {
-    background-color: #37BC9B;
-    border-color: #37BC9B;
+    background-color: #27A283;
+    border-color: #27A283;
 }
 .btn.btn-primary:hover,
 .btn.btn-primary:active,
