--- a/Resources/public/css/adminLTE.css
+++ b/Resources/public/css/adminLTE.css
@@ -174,6 +174,9 @@ img {
 .the-box.no-border{
     border:none;
 }
+.the-box .row {
+    margin-bottom:8px;    
+}
 .tiles-information {
     overflow: hidden;
     position: relative;
