--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -145,6 +145,11 @@ file that was distributed with this source code.
                             {% block sonata_top_nav_menu %}
                                 <div class="navbar-right">
                                     <ul class="nav navbar-nav">
+                                        <li>
+                                            <a href="{{ path(home_route_name) }}" target="_blank" title="retour au site">
+                                                <i class="fa fa-home"></i>
+                                            </a>
+                                        </li>
                                         <li class="dropdown">
                                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                                                 <i class="fa fa-plus-square fa-fw"></i> <i class="fa fa-caret-down"></i>
