--- a/Resources/public/css/adminLTE.css
+++ b/Resources/public/css/adminLTE.css
@@ -68,9 +68,6 @@ body > .header {
     top: 0;
 }
 @media screen and (min-width: 992px) {
-    .left-side {
-        top: 50px;
-    }
     /*Right side strech mode*/
     .right-side.strech {
         margin-left: 0;
@@ -2868,6 +2865,9 @@ Component: timeline
 .skin-black .logo:hover {
     background: #242A34;
 }
+.skin-black .right-side {
+    padding-top:0px;
+}
 /* skin-black content header */
 .skin-black .right-side > .content-header {
     background: transparent;
@@ -2908,7 +2908,7 @@ Component: timeline
     margin: 0 1px;
     background: #242A34;
 }
-.skin-black .left-side {
+.skin-black .left-side, .skin-black .wrapper {
     background: #313940;
 }
 .skin-black .sidebar a {
