--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -1,4 +1,4 @@
-{% extends SonataAdminBundle::standard_layout.html.twig %}
+{% extends 'SonataAdminBundle::standard_layout.html.twig' %}
 {% block sonata_top_nav_menu %}
     <div class="navbar-right">
         <ul class="nav navbar-nav">
