--- a/Resources/public/css/nkmvadmin.css
+++ b/Resources/public/css/nkmvadmin.css
@@ -139,7 +139,7 @@ a.bg-dark:hover { background-color: #434A54; }
 
 @media (min-width: 768px) {
     .navbar-right {
-        margin-right: ;
+        margin-right: 0;
     }
     .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
         margin-left: 0;
