--- a/Resources/public/css/nkmvadmin.css
+++ b/Resources/public/css/nkmvadmin.css
@@ -129,7 +129,7 @@ a.bg-dark:hover { background-color: #434A54; }
 
 .box-footer .select2-container .select2-choice { height:30px; line-height:100%; }
 .select2-container { width:100%; }
-.gmap { min-height: 300px; } 
+.gmap { height: 300px; } 
 
 .cms-block a.btn-link {
     color: #34495e;
